...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="598"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Route:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suw-tT-FQ1">
                                                <rect key="frame" x="20" y="10" width="60" height="25"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
...
                                                <color key="shadowColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="e.g. The Bat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zKC-sS-i7R">
                                                <rect key="frame" x="20" y="45" width="374" height="34"/>
                                                <color key="backgroundColor" red="0.86972146341777179" green="0.86551991045440091" blue="0.87392301638114267" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                <color key="shadowColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E1 5b, E1 5c, etc." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ9-ZG-hju">
                                                <rect key="frame" x="20" y="124" width="374" height="34"/>
                                                <color key="backgroundColor" red="0.86972146341777179" green="0.86551991045440091" blue="0.87392301638114267" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                <color key="shadowColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD/MM/YYYY" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZMZ-vz-h5Z">
                                                <rect key="frame" x="20" y="282" width="374" height="34"/>
                                                <color key="backgroundColor" red="0.86972146340000001" green="0.86551991049999999" blue="0.87392301640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="Submit">
                                                    <color key="titleColor" red="0.82884467959999997" green="0.79044581709999995" blue="0.98328930140000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
...
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="e.g. Ben Nevis" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e7l-u4-zzn">
                                                <rect key="frame" x="20" y="203" width="374" height="34"/>
                                                <color key="backgroundColor" red="0.86972146341777179" green="0.86551991045440091" blue="0.87392301638114267" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                    <connections>
                        <outlet property="climbingStyleTableView" destination="fjU-do-nKr" id="gR8-nt-UT3"/>
                        <outlet property="dateTextField" destination="ZMZ-vz-h5Z" id="9qR-ZP-oov"/>
                        <outlet property="gradeTextField" destination="OZ9-ZG-hju" id="wgb-X1-Ubj"/>
                        <outlet property="partnersTextField" destination="qdT-dw-izn" id="XiP-SA-e7I"/>
                        <outlet property="routeTextField" destination="zKC-sS-i7R" id="jTa-vx-ar0"/>
                        <outlet property="scrollView" destination="jK6-zd-n2f" id="hkj-lh-tpo"/>
                        <outlet property="submitButton" destination="UMQ-LW-lla" id="UiW-0B-i5g"/>
                        <outlet property="venueTextField" destination="e7l-u4-zzn" id="bGb-JZ-ekh"/>
                    </connections>
                </viewController>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Log Rock Climb" image="square.and.pencil" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="bold"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="54" width="374" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="View Logbook" image="book" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="bold"/>
                                        </state>
...
        <scene sceneID="xJb-Od-23M">
            <objects>
                <tableViewController storyboardIdentifier="logbookScreen" id="lPa-EO-71b" customClass="MyLogbookViewController" customModule="BMG" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Tak-Yj-aLd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
