...
        rockClimbLogbookCell.detailTextLabel?.text = """
        Grade: \(rockClimbEntry.grade)
        Style: \(rockClimbEntry.climbingStyle)
        """
        
        rockClimbLogbookCell.backgroundColor = ColorCompatibility.systemGray4
        rockClimbLogbookCell.textLabel?.accessibilityIdentifier = "cellTitleText"
        rockClimbLogbookCell.detailTextLabel?.accessibilityIdentifier = "cellDetailText"
        rockClimbLogbookCell.accessoryView?.accessibilityIdentifier = "disclosureAccessory"
        
        return rockClimbLogbookCell
        
    }

...
