//
//  Grades.swift
//  BMG
//
//  Created by Andrew Wilson-Jones on 22/10/2019.
//  Copyright © 2019 Emma Walker - TVandMobile Platforms - Core Engineering. All rights reserved.
//

import Foundation

struct Grades{
    //think about using enums?
    static let rockClimbGrades:[[String]] = [
        ["Mod","Diff","VDiff","HVD","Sev","HS","VS","HVS","E1", "E2", "E3", "E4", "E5", "E6", "E7","E8", "E9"],
        ["", "4a", "4b", "4c", "5a", "5b", "5c", "6a", "6b", "6c", "7a", "7b"]
    ]
    
   static let adjectivalGrades = ["M","D","HD","VD","HVD","S","HS","VS","HVS","E1", "E2", "E3", "E4", "E5", "E6", "E7","E8", "E9"]
    
   static let technicalGrades = ["", "4a", "4b", "4c", "5a", "5b", "5c", "6a", "6b", "6c", "7a", "7b"]
    
    static let scottishWinterGrades:[String] = ["I","II","III","IV","V","VI","VII","VIII", "IX"]
    
    static let alpineGrades:[String] = ["F","PD","AD","D","TD","ED"]
}
